--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -354,7 +354,7 @@ m_invited_friend_joined = Award for inviting <a href="/people-{1}">{0}</a> to Wh
 m_transfer_from_guest = Transferred coins from your guest account when you registered.
 m_created_account = Some coins for you to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
-m_earned_badge = Award for earning the {0} badge.
+m_earned_badge = Award for earning the {0} stamp.
 m_bought_bars = Bought bars for {0}.
 m_cashed_out = Cashed out for {0}.
 m_exchanged_for_bars = Exchanged for bars.
