Changed bling worth to be an integer number of cents rather than a floating point dollar amount, to fix some off-by-1 errors.  It was originally a float because we could conceivably have 1 bling worth some fraction of cents, and keep track of fractions-of-fractions as integers would be a bit of a pain to do.  We could use BigDecimal, but it's not supported in GWT except by a side project that adds an extra 172kb of Javascript the user has to download.  So rather than following this rabbit hole to the end, we will just support bling worth in cents.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -161,6 +161,7 @@ buyBars = Buy Bars!
 blingHeader = Bling
 blingBalance = Bling Balance:
 blingWorth = Bling Worth (USD):
+blingWorthValue = {0} (current exchange rate is {1}/bling)
 
 exchangeBlingForBars = Exchange Bling for Bars
 exchangeBlingDescription = This will allow you to exchange a portion of your bling into an equal \
