Build the embedstub so that it has network access from the local disk. This will allow people to run it directly off their hard drive. Which we don't strictly really want them to do, but on the other hand there's not a good reason to prevent it.

--- a/build.xml
+++ b/build.xml
@@ -659,6 +659,7 @@
     <exec executable="${basedir}/bin/mxmlc" failonerror="true">
       <arg value="-load-config"/>
       <arg value="etc/msoy-config.xml"/>
+      <arg value="-use-network"/>
       <arg value="-compiler.source-path=${asrc.dir}/"/>
       <arg value="-output"/>
       <arg value="${deploy.dir}/embedstub-base.swf"/>
