Revamped Stuff and Shop sidebar navigation with Bill's new design.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -31,7 +31,7 @@ ipfUsed = In use
 ipShopFor = Want more cool stuff?
 ipToCatalog = Shop!
 
-panelNoItems = You have no {0} items. Click "Shop" above to buy some!
+panelNoItems = You have no {0} items. Head to the "Shop" to buy some!
 panelNoMatches = No items match the query: {0}
 panelCreateNew = Upload...
 
