Cleaned up role handling, added maintainer role (and a notion of a root user which eliminates the need for database hackery on dev servers), nixed a bunch of no longer used stuff (old user spamming, bulk invite granting UI).
Currently the only thing maintainers can do that no one else can is modify
runtime configuration values (with the exception that admins can schedule
reboots).

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -24,14 +24,13 @@ browserTitle = Player Browser
 adminControls = Admin functions:
 supportControls = Support functions:
 inviteControls = Invitation functions:
-testingControls = Testing functions:
 displayDashboard = Display Dashboard
 reviewButton = Review Flagged Items
 issueInvites = Issue Invites to Players
 affMapButton = View affiliate mappings
 browserPlayers = Player Browser
-spamPlayers = Spam Players
 viewABTests = View or Create A/B Tests
+viewExchange = Exchange
 
 #
 # Issue Invites Popup
@@ -117,9 +116,7 @@ spamSent = Your message has been sent to {0} accounts. {1} accounts had an \
 
 infoTitle = Member Info
 
-mipMadeSupport = This member now has support privileges.
-mipMadeNotSupport = This member no longer has support privileges.
-
+mipChangedRole = Member''s role has been changed to {0}.
 
 #
 # A/B Tests
