Truth in advertising: we currently only support FLV format videos.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -147,7 +147,7 @@ errToyNotFlash = Toy media must be flash (SWF) files.
 videoTip = The video media file
 videoLabel = Video Media
 
-errVideoNotVideo = Video data must be an FLV, MPEG, WMV or Quicktime file.
+errVideoNotVideo = Video data must be an FLV file.
 
 #
 # DecorEditor
