--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -188,7 +188,7 @@ editorBlurb6 = Pets are animated characters that wander rooms, change moods, and
   your pet, buy a free <a href="#shop-l_6_404">easy image pet</a> instead.
 editorBlurb7 = Music and sound effects can be added to <a href="#world-home">your room</a>, \
   and must be MP3 format.
-editorBlurb8 = Videos must be in FLV, MPEG, WMV, or QuickTime format.
+editorBlurb8 = Videos must be in FLV format.
 editorBlurb9 = Backdrops can be images (GIF, PNG, or JPG format images) or Flash SWF files.  \
   For animation, use SWF format as GIFs won''t be animated inside of rooms.
 editorBlurb10 = Toys in Whirled are interactive, so they can only be SWF files.  If you want \
