--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -29,3 +29,23 @@ landingHelp = Help
 # Creators landing page
 
 creatorsGetStarted = Get started now!
+
+#
+# Deviant Art Contest page
+
+dacontestRules = <ul> \
+  <li>Entrants must be 13 years old or older to participate in the Design Your Whirled \
+  Contest</li> \
+  <li>Entries may use any item in the Whirled Shop to create their Whirled.  Creating your own \
+  original items is encouraged, but not required.</li> \
+  <li>Individual rooms and multi-room Whirleds will both be considered.</li> \
+  <li>No copyrighted images can be used in any way.</li> \
+  </ul><br /> \
+  <a href="http://wiki.whirled.com/DeviantArt_Contest">Please see this page \
+  for additional terms and conditions.</a>
+
+dacontestJudging = Contest entries will be judged based on technical skill, originality, and \
+  creativity.<br /><br /><br />\
+  <b>Judges:</b> <a href="#people-8">Cleaver</a>, <a href="#people-12">Nemo</a>, \
+  <a href="#people-316">Billiam</a>, <a href="#people-13">Brittney</a>, \
+  <a href="#people-12770">Vortex</a>
