--- a/pages/crossdomain.xml.in
+++ b/pages/crossdomain.xml.in
@@ -3,6 +3,7 @@
    <allow-access-from domain="@SERVER_URL_HOST@" to-ports="*"/>
    <allow-access-from domain="first.whirled.com" to-ports="*"/>
    <allow-access-from domain="*.kongregate.com" to-ports="*"/>
+   <allow-access-from domain="@MEDIA_URL_HOST@" to-ports="@HTTP_PORT@"/>
 </cross-domain-policy>
 <!--
   Notice:
