Add a link back to the master item for (original) subitems. The arrow button in the upper left also goes there, but this link makes things clearer. I added the arrow a long time ago and didn't even remember that it did what I wanted.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -77,6 +77,9 @@ detailGiftTip = You can send this item as a gift:
 detailGift = Send as Gift
 detailGiftDisabled = In use items cannot be sent as gifts.
 
+detailCanViewSuiteMaster = This item is part of a suite:
+detailViewSuiteMaster = View Master
+
 detailConfirmDelete = Are you sure you want to delete this item?
 
 errItemMissingName = Please configure the name of this item. Click Edit above to do so.
