Refuse to delist games that have listed subitems. Delisting such a game would disconnect it from all of its subitems which would have to be delisted and relisted in order for them to work properly again, so let's just not let people delist the game until they've taken the necessary step of delisting all subitems. We also suggest that they might not actually want to delist the item in the first place, maybe they just want to hide the listing.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -47,9 +47,12 @@ item_listed = This item is listed in the shop. You must delete the shop \
 hit_sales_limit = Oops. That item is limited edition and it has sold out.
 cant_self_crossbuy = You may not buy from yourself using the opposite currency.
 
-list_super_item = In order to list sub items in the shop, the parent item must first be listed.
+list_super_item = In order to list sub-items in the shop, the master item must first be listed.
 cost_updated = The price for this item has been updated.  Please refresh the page to see the \
   newest price.
+no_delist_listed_subitem_haver = You must delist all sub-items (trophies, item packs, etc.) \
+  before you can delist this master item. Perhaps you just want to change this item''s \
+  pricing to hidden?
 
 #
 # Swiftly server messages
