Cleaned up some GameDetail related bits. We don't need to be sending both the source and listed item down to the client. Made code properly report "No such game" if you ask for details on the listed version of an unlisted game.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -14,6 +14,8 @@ noSuchPlayer = We aren''t sure what player you''re talking about.
 gdpTitle = Game Detail
 gdpLoading = Loading game details...
 
+gdpNoSuchGame = The requested game does not exist.
+
 gdpDevVersion = Note: this is the in-development version of this game. Trophies \
   awarded during this game will not be saved nor will ratings be updated.
 
