Show a better error message for attempts to upload AVRGs with no server side code

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -94,6 +94,7 @@ gameServerMediaTip = An .abc file containing your server agent. Only needed for 
 gameServerClass = Server Agent Class
 gameServerClassTip = Full name of the class to instantiate (leave blank for default).
 errMediaNotABC = Server agent media must be a compiled actionscript binary (.abc) file.
+errServerMediaRequired = A server agent is required for this game.
 
 gameShotTab = Screenshot
 gameShotTitle = This is displayed on your game''s info page
