Display a tooltip appropriate to your new mail status.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -52,7 +52,8 @@ statusLogoff = Logoff
 coinsTip = Your current Coins balance
 barsTip = Your current Bars balance
 levelTip = Your current Level
-mailTip = You have new mail
+mailTip = Read your Whirled mail
+newMailTip = You have new Whirled mail
 
 #
 # ProfileBlurb and CreateAccountPanel
