--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -2,6 +2,7 @@
   <inherits name="com.google.gwt.xml.XML"/>
   <inherits name="person"/>
   <inherits name="trophy"/>
+  <inherits name="room"/>
 
   <source path="com/kisgergely/gwt/canvas/client"/>
 
