Final tweaks to DA Contest pages, you can see these at #landing-dacontest and #me-dacontesti.  Added in the list of rooms; urls are tested and listed at WRLD-409

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -207,14 +207,13 @@ deductSuccess = Successfully deducted {0} coins.
 #
 # Deviant Art Contest page
 
-dacontestRules = <ul> \
-  <li>Entrants must be 13 years old or older to participate in the Design Your Whirled \
-  Contest</li> \
-  <li>Entries may use any item in the Whirled Shop to create their Whirled.  Creating your own \
-  original items is encouraged, but not required.</li> \
-  <li>Individual rooms and multi-room Whirleds will both be considered.</li> \
-  <li>No copyrighted images can be used in any way.</li> \
-  </ul><br /> \
+dacontestRules = <p>Entrants must be 13 years old or older to participate in the Design Your \
+  Whirled Contest</p> \
+  <p>Entries may use any item in the Whirled Shop to create their Whirled.  Creating your own \
+  original items is encouraged, but not required.</p> \
+  <p>Individual rooms and multi-room Whirleds will both be considered.</p> \
+  <p>No copyrighted images can be used in any way.</p> \
+  <br /> \
   <a href="http://wiki.whirled.com/DeviantArt_Contest">Please see this page \
   for additional terms and conditions.</a>
 
