Freak not out if we ask for the profile of a non-existent member. Instead display a friendly error message. Also switched from VerticalPanel to FlowPanel. Tables--.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -25,6 +25,8 @@ profileTitle = Profile
 profileOtherTitle = {0}''s Profile
 profileSelfTitle = My Profile
 
+profileNoSuchMember = That Whirled member could not be found.
+
 #
 # RoomsPanel
 
