Banner for the dA contest at the top of the me page, small tweaks to contest pages.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -219,7 +219,7 @@ dacontestRules = <p>Entrants must be 13 years old or older to participate in the
 
 dacontestJudging = Contest entries will be judged based on technical skill, originality, and \
   creativity.<br /><br /><br />\
-  <b>Judges:</b> <a href="#people-8">Cleaver</a>, <a href="#people-12">Nemo</a>, \
-  <a href="#people-316">Billiam</a>, <a href="#people-13">Brittney</a>, \
-  <a href="#people-12770">Vortex</a>
+  <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
+  <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-316">Billiam: Artist</a>, <br /> \
+  <a href="#people-13">Brittney: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
   
