- Style fixes, usability improvements. - We want the image to link to the room in Flash, the name to link to the room   detail page.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -32,8 +32,10 @@ profileNoSuchMember = That Whirled member could not be found.
 
 roomsTitle = {0}''s Rooms
 roomsMineTitle = My Rooms
-roomsIntro = These are all of {0}''s public rooms. Click a room to enter it.
-roomsMineIntro = These are all of your rooms. Click a room to enter it.
+roomsIntro = These are all of {0}''s public rooms. Click a room to enter it or click its \
+  name to see room details.
+roomsMineIntro = These are all of your rooms. Click a room to enter it or click its name \
+  to see room details.
 
 #
 # ProfileBlurb
