--- a/src/gwt/client/room/RoomMessages.properties
+++ b/src/gwt/client/room/RoomMessages.properties
@@ -1,4 +1,9 @@
 #
 # $Id$
 
-roomPopulation = {0} online now!
+#
+# RoomWidget
+
+rwThumbTip = Enter this room
+rwNameTip = View this room''s details
+rwRoomPopulation = {0} online now!
