Front end and proper flow for one-click opting out of announcement messages. Still need to implement the backend and actually put the link in our announcement messages.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -86,6 +86,11 @@ optOutAccept = Opt Out
 optOutReject = Not Now
 optOutSuccessful = {0} will no longer receive email from whirled.com
 
+optOutOpting = Turning off announcement emails...
+optOutOptedOut = Announcement emails will no longer be sent to {0}.
+optOutReenable = You can configure all Whirled email preferences on the Me -> \
+  <a href="#me-account">Account</a> page.
+
 #
 # ResetPasswordPanel
 
