--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -64,6 +64,8 @@ nextBadgesTitle = Try some more Whirled fun!
 #
 # EditAccountPanel
 
+editMustLogon = Please logon above to view your account information.
+
 editTip = You can update your account information above.
 
 editRealNameHeader = Update Real Name
