Fixed up some logon panel bits. Added a logon panel to the edit account info page when one is not logged in.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -64,7 +64,7 @@ nextBadgesTitle = Try some more Whirled fun!
 #
 # EditAccountPanel
 
-editMustLogon = Please logon above to view your account information.
+editMustLogon = Please logon to view your account information.
 
 editTip = You can update your account information above.
 
