Headless is breaking the build. We'll figure this out after the release.

--- a/build.xml
+++ b/build.xml
@@ -462,7 +462,7 @@
           <pathelement location="${src.dir}"/>
           <pathelement location="${gsrc.dir}"/>
         </classpath>
-        <jvmarg value="-Djava.awt.headless=true"/>
+        <!-- TODO: <jvmarg value="-Djava.awt.headless=true"/> -->
         <arg value="-style"/><arg value="${gwt_style}"/>
         <arg value="-out"/>
         <arg value="${pageout.dir}"/>
