Added one-click opt out of announcement emails.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -34,6 +34,12 @@ version_mismatch = Your client is out of date. Please reload the page (hold \
   down shift and click the reload button in the browser toolbar).
 
 #
+# MemberService messages
+
+opt_out_hash_mismatch = That opt-out URL is not valid. Please make sure it \
+  was copied exactly from the email you received.
+
+#
 # Inventory server messages
 
 no_such_item = That item could not be located.
