--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -46,5 +46,5 @@ dacontestRules = <p>Entrants must be 13 years old or older to participate in the
 dacontestJudging = Contest entries will be judged based on technical skill, originality, and \
   creativity.<br /><br /><br />\
   <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
-  <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-316">Billiam: Artist</a>, <br /> \
-  <a href="#people-13">Brittney: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
+  <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-13">Brittney: Artist</a>, <br /> \
+  <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
