--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -57,7 +57,7 @@ nextFindTip = Search by real name, Whirled name or email address.
 nextFriendClick = Click a friend to visit!
 
 nextPassportTip = Click "GO" on these Whirled Passport stamps to go right to the fun, and earn \
-coins at the same time!
+  coins at the same time!
 nextBadgesSeeAll = See all
 nextBadgesTitle = Try some more Whirled fun!
 
@@ -120,6 +120,7 @@ permaNameConfigured = Your Permaname has been configured. Note: you must use \
 
 #
 # Passport
+
 passportMarquee = Whirled Passport
 passportDescription = Your Whirled Passport stamps suggest fun things to do in Whirled and keep a \
   record of the fun you''ve had along the way.  Collect them all!
@@ -133,19 +134,19 @@ passportPlayerNotFound = The player was not found.
 # Transaction history
 
 tipCoins = Coins are earned by playing most <a href="/#games">games</a>, selling items in the \
-           <a href="/#shop">shop</a> or earning <a href="/#me-passport">passport stamps</a>. \
-           <a href="http://wiki.whirled.com/Coins">Learn more about coins</a>.
+  <a href="/#shop">shop</a> or earning <a href="/#me-passport">passport stamps</a>. \
+  <a href="http://wiki.whirled.com/Coins">Learn more about coins</a>.
 
 tipBars = Bars are the faster way to get all the cool stuff you want! Bars are \
-          <a href="{0}">available for purchase here</a> using credit card, paypal, store cards and \
-          other methods. <a href="http://wiki.whirled.com/Bars">Learn more about Bars</a>.
+  <a href="{0}">available for purchase here</a> using credit card, paypal, store cards and \
+  other methods. <a href="http://wiki.whirled.com/Bars">Learn more about Bars</a>.
 
 tipBling = Bling is earned by creators when they sell items priced in Bars. Bling can be turned \
-           into Bars or cashed out as real money! \
-           <a href="http://wiki.whirled.com/Bling">Learn more about Bling</a>.
+  into Bars or cashed out as real money! \
+  <a href="http://wiki.whirled.com/Bling">Learn more about Bling</a>.
 
 tipCreator = Your coin and Bling earnings from <a href="http://wiki.whirled.com/Portal:Creators"> \
-             creating and selling</a> items in the shop.
+  creating and selling</a> items in the shop.
 
 billingTip = Earning coins takes time.<br/>Get bars right now!
 
@@ -168,7 +169,7 @@ blingWorthValue = {0} (current exchange rate is {1}/bling)
 
 exchangeBlingForBars = Exchange Bling for Bars
 exchangeBlingDescription = This will allow you to exchange a portion of your bling into an equal \
-	amount in bars.
+  amount in bars.
 exchangeAmount = Bling to Exchange:
 exchangeButton = Exchange for Bars
 exchangeConfirm = Are you sure you want to exchange {0} Bling into {0} Bars? This cannot be reversed!
@@ -177,9 +178,9 @@ blingInvalidAmount = You must specify an amount of at least 1 bling.
 blingExchangeSuccessful = Your bling has been exchanged for bars successfully.
 blingCashOutHeader = Cash Out Your Bling!
 blingCashOutDescription = Cash out some or all of your bling by specifying the amount and clicking \
-	"Cash Out".  It may take 3-5 business days to process your request.  Cash out requests are \
-	fulfilled to a particular PayPal account; please make sure you provide the correct PayPal \
-	email address below.
+  "Cash Out".  It may take 3-5 business days to process your request.  Cash out requests are \
+  fulfilled to a particular PayPal account; please make sure you provide the correct PayPal \
+  email address below.
 blingCashOutAmount = Bling amount to cash out:
 blingCashOutButton = Cash Out
 cashOutRequestSuccessful = Your request to cash out your bling has been submitted.
@@ -197,7 +198,8 @@ cashOutCity = City
 cashOutState = State
 cashOutPostalCode = Zip Code
 cashOutCountry = Country
-cashOutEmailsDontMatch = The PayPal email addresses do not match.  Please make sure the email address is correct.
+cashOutEmailsDontMatch = The PayPal email addresses do not match. \
+  Please make sure the email addresses are correct.
 cashOutAmountWorth = Worth: {0}
 cashOutBelowMinimum = You cannot cash out until you have at least {0} bling.
 cancelCashOutSuccess = Successfully cancelled your pending cash out request.
