A little UI/layout love for the rooms page.

--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -16,6 +16,14 @@ unknownLocation = That address is not recognized.
 errUnknownGameType = Zoiks! Uknown game type {0}.
 
 #
-# Room page
+# Room detail
+
 owner = Owner: 
 tabComments = Comments
+
+#
+# Rooms page
+
+activeRooms = Active rooms
+coolRooms = Hot new rooms
+emptyGrid = No rooms found, please try again later.
