I wonder how long this has been weird for

--- a/src/gwt/client/mail/MailMessages.properties
+++ b/src/gwt/client/mail/MailMessages.properties
@@ -99,7 +99,7 @@ friendAlreadyFriend = This is an old friendship invitation from "{0}", who has s
   your friend.
 
 friendInvitation = This is a friend invitation. Accept it by clicking the "Accept" button, \
-  or delete this message it to decline.
+  or delete this message to decline.
 friendBtnAccept = Accept
 
 friendReplyBody = Very well, I accept!
