Minimal Rooms panel gussying.

--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -24,6 +24,9 @@ tabComments = Comments
 #
 # Rooms page
 
+roomsMarquee = Rooms
+roomsIntro = Rooms are where you can create your own space and show it off to your friends. \
+             Decorate, chat and play games in your room!
 activeRooms = Active rooms
 coolRooms = Hot new rooms
 emptyGrid = No rooms found, please try again later.
