Added the Rooms tab to the nav bar.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -239,6 +239,7 @@ genre8 = MMO / Whirled
 meTitle = Me
 stuffTitle = Stuff
 gamesTitle = Games
+roomsTitle = Rooms
 whirledsTitle = Whirleds
 shopTitle = Shop
 createTitle = Create
