--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -36,6 +36,7 @@ charRemaining = (Characters remaining: {0})
 
 menuMe = Me
 menuStuff = Stuff
+menuRooms = Rooms
 menuWorlds = Whirleds
 menuGames = Games
 menuShop = Shop
