Moved the Help tab off as a text link beside "Logoff".

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -49,6 +49,7 @@ headerLogon = Logon!
 # StatusPanel
 
 statusLogoff = Logoff
+statusHelp = Help
 
 coinsTip = Your current Coins balance
 barsTip = Your current Bars balance
