Translations and click actions for the EXPLORER badge.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -262,6 +262,7 @@ interest8 = About Me:
 
 badge_3aa0bef4 = Fixture {0}
 badge_c4fd834b = Friendly {0}
+badge_21cc30a2 = Explorer {0}
 badge_3ca5a071 = Outspoken {0}
 badge_e6a0e95b = Contender {0}
 badge_8a19eba3 = Collector {0}
@@ -281,6 +282,7 @@ badge_6e67007d = Character Designer {0}
 
 badgeDesc0_3aa0bef4 = Spend 3 total hours exploring rooms and games in Whirled!
 badgeDescN_3aa0bef4 = Log {0} hours in Whirled!
+badgeDescN_21cc30a2 = Visit {0} rooms on the Whirled Tour!
 badgeDesc0_c4fd834b = Make a <a href="http://wiki.whirled.com/Friend">friend</a> in Whirled!
 badgeDescN_c4fd834b = Make {0} <a href="http://wiki.whirled.com/Friend">friends!</a>
 badgeDesc0_3ca5a071 = Give a creator feedback on a shop item by \
