New look for the Me page: stamps have been moved to the flash home landing grid, and news feed brought up to the top.  Changes to the news feed are still to come.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -34,6 +34,8 @@ goToGame = Join {0}''s Game
 friendIn = in {0}
 friendPlaying = playing {0}
 
+newsTitle = My News
+
 #
 # WhatsNextPanel
 
@@ -51,7 +53,7 @@ nextFriends = My Friends Online
 nextNoFriends = No friends yet? No problem!
 nextInviteTip = Invite My Friends!
 nextOr = or...
-nextFind = Find someone on Whirled:
+nextFind = Find someone:
 nextFindTip = Search by real name, Whirled name or email address.
 
 nextFriendClick = Click a friend to visit!
