Add a link to compose mail on the inbox screen.

--- a/src/gwt/client/mail/MailMessages.properties
+++ b/src/gwt/client/mail/MailMessages.properties
@@ -23,6 +23,7 @@ deleteNotDeleted = The conversation was not deleted as it has new messages. \
 mailNoMail = You have no mail.
 mailNoSubject = <no subject>
 mailCheck = Check Mail
+mailCompose = Compose Message
 mailDeleteTip = Delete this conversation
 
 #
