A button to buy again from the shop.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -76,6 +76,7 @@ msgListingUseIt = Use it now!
 errListingNotFound = Unable to find shop listing to delist.
 
 boughtTitle = {0} Purchased!
+timesBought = Bought: {0}
 
 boughtViewStuff = You can find your new {0} in:
 boughtGoNow = Me -> My Stuff -> {0}
