Account editing page nice-ification.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -73,13 +73,10 @@ editTip = You can update your account information above.
 editRealNameHeader = Update Real Name
 editRealNameTip = Real Name is for searching purposes only.  It will never be displayed.
 editRealName = Real Name:
-editNameReady = Click ''Update'' to update your real name.
 realNameUpdated = Real Name updated.
 
 editEmailHeader = Update Email Address
 editEmail = Email address:
-
-editEmailReady = Click ''Update'' to update your email address.
 
 emailUpdated = Email address updated. Remember, this new address must be used \
   next time you log onto Whirled.
@@ -87,11 +84,10 @@ emailUpdated = Email address updated. Remember, this new address must be used \
 editEPrefsHeader = Update Email Preferences
 
 editWhirledMailEmail = Whirled Mail:
-editWhirledMailEmailTip = If checked, we will send you email when you receive a Whirled mail.
+editWhirledMailEmailTip = Send email when you receive a Whirled mail.
 
 editAnnounceEmail = Announcements:
-editAnnounceEmailTip = If checked, we will send you email when we have \
-  announcements about Whirled.
+editAnnounceEmailTip = Send email when we have announcements about Whirled.
 
 eprefsUpdated = Email preferences updated.
 
@@ -101,11 +97,9 @@ editConfirm = Confirm:
 
 editMissingConfirm = Reenter your password to confirm it.
 editPasswordMismatch = The passwords you''ve entered do not yet match.
-editPasswordReady = Click ''Update'' to update your password.
 
 passwordUpdated = Your password has been updated.
 
-editPickPermaNameHeader = Pick Your Permaname
 editPermaName = Permaname:
 editPermaNameTip = <b>Note:</b> your Permaname can never be changed once it is set.<br> \
   You must create a Permaname to log onto the Wiki and the Forums.
@@ -114,7 +108,6 @@ editPermaShort = Your Permaname must be at least four characters long.
 editPermaLong = Your Permaname cannot be more than twelve characters long.
 editPermaInvalid = Your Permaname can only contain letters, numbers and \
   underscore and must start with a letter.
-editPermaReady = Click ''Set'' to configure your Permaname.
 
 permaNameConfigured = Your Permaname has been configured. Note: you must use \
   your Permaname to log onto the Forums and the Wiki. We plan to fix this in \
