New admin panel for viewing bureau activity * Button on main admin panel. Rearranged this slightly to keep buttons from going off the edge. * New class describing a bureau launcher and all the bureaus it has launched. * New method in the bureau launcher service to set the information about a launcher. * Refactored bureau bits of MsoyBaseServer into BureauManager, it was getting very crowded in there. * New bureau launcher sender method to request a new copy of a launcher's information. * New admin service methods to refresh the data from the launcher and to fetch the data from the manager * Servlet implementation, posts requests to event thread and waits for result.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -30,6 +30,7 @@ issueInvites = Issue Invites to Players
 affMapButton = View affiliate mappings
 browserPlayers = Player Browser
 viewABTests = View or Create A/B Tests
+viewBureaus = View Bureau Activity
 viewExchange = Exchange
 
 #
@@ -168,3 +169,15 @@ cashOutEntryCancelSuccess = The cash out request has been canceled.
 cashOutEntryCashOutPanelAmount = Amount to cash out:
 cashOutEntryCashOutPanelButton = Cash Out This Member
 cashOutEntryCashOutSuccess = The bling has been successfully cashed out.
+
+#
+# Bureau
+bureauServiceFailed = Failed to get bureau information
+bureauRequestRefresh = Refresh Data
+bureauRefreshPage = Refresh Page
+bureauHostname = Host
+bureauId = Bureau Id
+bureauLogSpaceUsed = Log space used
+bureauLogSpaceRemaining = Log space remaining
+bureauNoneActive = No bureaus active
+bureauVersion = Data version
