Display the launch time, shutdown time and message on the bureau info panel

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -181,3 +181,7 @@ bureauLogSpaceUsed = Log space used
 bureauLogSpaceRemaining = Log space remaining
 bureauNoneActive = No bureaus active
 bureauVersion = Data version
+bureauLaunchTime = Last launch time
+bureauFirstRun = Not yet shutdown
+bureauShutdownTime = Last shutdown time
+bureauMessage = Message
