First of the changes to the news feed on the Me page, see WRLD-433.  Still TODO: merging back in aggregating/rendering of the feed on the Profile page, changes to feed content, and "more" links.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -25,6 +25,7 @@ friendAddedFriend =  {0} and {1} are now friends.
 friendAddedFriends =  {0} is now friends with {1}.
 friendAddedFriendsRight = {0} are now friends with {1}.
 friendUpdatedRoom = {0} has updated their room {1}.
+friendUpdatedRooms = {0} has updated their rooms: {1}.
 friendsUpdatedRoom = Your friends have updated their rooms: {0}.
 friendWonTrophy = {0} earned the {1} trophy.
 friendWonTrophies = {0} earned the {1} trophies.
