--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -367,3 +367,17 @@ m_cancel_cash_out = Bling cash out canceled: {0}.
 m_request_cash_out = A request to cash out {0} bling has been submitted.
 m_support_adjust = Adjustment made by Whirled staff, <a href="/#people-{1}">{0}</a>.
 m_game_plays_bling_awarded = Game developer bling pool award for <a href="/#games-d_{0}">{1}</a>.
+
+#
+# Me page / Profile News Feed categories (see FeedMessageType)
+
+feedCategory1 = System Announcements
+feedCategory100 = Friendings
+feedCategory101 = Updated Rooms
+feedCategory102 = Game Trophies
+feedCategory103 = New Shop Listings
+feedCategory104 = Levelling
+feedCategory105 = Passport Stamps
+feedCategory200 = Whirled Announcements
+feedCategory300 = Comments
+feedCategory999 = UNUSED
