Greeter tag in profile blurb. Greeter tick box in profile editor. Servlet greeter flag update and peer wide propagation. A couple of minor drive bys.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -27,6 +27,8 @@ profileSelfTitle = My Profile
 
 profileNoSuchMember = That Whirled member could not be found.
 
+profileGreeterLabel = Whirled Greeter
+
 #
 # RoomsPanel
 
@@ -63,6 +65,9 @@ eage = Show age
 ebirthday = Birthday
 esex = Sex
 elocation = Location
+egreeterLabel = Whirled Greeter
+egreeterTip = Tick here to help newcomers find their way around whirled. You will get a special \
+    name tag and automatically accept friend requests.
 
 sexMale = Male
 sexFemale = Female
