Changes to the news feed contents: display comments on your shop items, show snapshots of rooms in room creation and room comment items, show profile pictures on friendings, and only display the most recent 5 trophies/badges/etc when aggregating for each member (trying this out).

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -50,6 +50,7 @@ groupAnnouncement = {0} announcement: {1}
 
 selfRoomComment = {0} has {1} on the room {2}.
 selfRoomCommented = commented
+selfItemComment = {0} has commented on the item {1}.
 
 # Gallery messages
 
