--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -380,4 +380,5 @@ feedCategory104 = Levelling
 feedCategory105 = Passport Stamps
 feedCategory200 = Whirled Announcements
 feedCategory300 = Comments
+feedCategory301 = Item Comments
 feedCategory999 = UNUSED
