--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -14,6 +14,7 @@ emptyFeed = This shows what your friends have been up to on Whirled. \
 fullFeed = Show more...
 shortFeed = Show less...
 yesterday = Yesterday:
+feedProfileMemberUnknown = Someone
 
 # Global Feed Messages
 
@@ -48,9 +49,8 @@ groupAnnouncement = {0} announcement: {1}
 
 # Self Feed messages
 
-selfRoomComment = {0} has {1} on the room {2}.
-selfRoomCommented = commented
-selfItemComment = {0} has commented on the item {1}.
+selfRoomComment = {0} commented on the room {1}.
+selfItemComment = {0} commented on the item {1}.
 
 # Gallery messages
 
